@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-12T16:28:58Z",
+  "timestamp" : "2022-08-15T16:25:43Z",
   "count_outdated" : 289,
   "uniques_outdated" : 176,
-  "count" : 300,
-  "uniques" : 184,
+  "count" : 303,
+  "uniques" : 186,
   "clones" : [
     {
       "timestamp": "2022-08-03T00:00:00Z",
@@ -25,6 +25,13 @@
       "count_minmax": [ 2, 5 ],
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ]
+    },
+    {
+      "timestamp": "2022-08-15T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
