@@ -1,5 +1,5 @@
 {
-  "count": 11,
+  "count": 14,
   "uniques": 6,
   "clones": [
     {
@@ -16,6 +16,11 @@
       "timestamp": "2022-08-12T00:00:00Z",
       "count": 5,
       "uniques": 3
+    },
+    {
+      "timestamp": "2022-08-15T00:00:00Z",
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
